# lily

./: README.md  run_tests.sh
examples/: example.nc  hello_world.lily
src/: .gitignore  1parser.ml  Makefile  TODO_Makefile  ast.cmi  ast.cmo  ast.ml  astscanner.ml  dune  dune-project  functional_op_test.cmi  functional_op_test.cmo  functional_op_test.ml  functional_test  irgen.ml  lily.ml  modules.ml  parser.cmi  parser.cmo  parser.mly  parser.output  parser1.ml  parser1.mli  parserscanner.mly  presemant.ml  readers.ml  sast.ml  scanner.cmi  scanner.cmo  scanner.mll  semant.ml  stdlib.lily  stdlibdev.lily  structs.ml  temp.ir  temp.txt  test.ir  test.ml  test0.ml  test1  (+8 more)
src/lib/: dune
test/: example.lily  example.mc  example10.lily  example12.lily  example15.lily  example16.lily  example17.lily  example2.lily  example2.tokens  example3.lily  example4.lily  example6.lily  example7.lily  example8.lily  example9.lily  example_space.lily  example_space.tokens  for_loop.lily  gcd.lily  gcd.tokens  hello_world.lily  hello_world.tokens  hw.lily  iter.lily  list.lily  list2.lily  list3.lily  list4.lily  list5.lily  list6.lily  list7.lily  list8.lily  oneslide.lily  printing1.lily  printl.lily  recursion2.lily  stdlib1.lily  stdlib10.lily  stdlib14.lily  stdlib16.lily  (+16 more)
test/parser_error/: example22.lily
test/scanner_error/: scanningfail.lily
test/semantics_error/: example11.lily  example13.lily  example14.lily  example2.lily  example5.lily  gcd.lily  mismatch.lily  tani12.lily  tani7.lily
test/tanitests/: tani1.lily  tani11.lily  tani12.out  tani13.lily  tani14.lily  tani15.lily  tani5.lily  tani6.lily  tani6.out  tani9.lily
test/working/: calls.lily  example.lily  example11.lily  example15.lily  example18.lily  example19.lily  for1.lily  (+90 more)
text/: BuildInstructions.md  gcdexample.lily
