(library
 (name libparser)
 (modules scanner tokenize parser ast))
(ocamllex scanner)
(ocamlyacc parser)
(ocamlyacc parserscanner)

(library
 (name libsemant)
 (modules sast semant structs presemant)
(libraries libparser))

(library
 (name libirgen)
 (modules irgen)
(libraries libparser libsemant llvm))

(executable
 (name test1)
 (modules test1)
 (libraries libparser))

(executable
 (name test2)
 (modules test2)
 (libraries libparser libsemant))

(executable
 (name lily)
 (modules lily readers)
 (libraries libparser libsemant libirgen)
 (flags :standard -ccopt -fno-lto))